@@ -22,10 +22,11 @@
  */
 
 #include <config.h>
+#include "rset.h"
 
 #include "database.h"
-#include "rset.h"
 #include "stats.h"
+#include "omassert.h"
 #include "omdebug.h"
 
 #include "autoptr.h"
