@@ -1,3 +1,9 @@
+Thu Jun 03 10:36:56 GMT 2010  Olly Betts <olly@survex.com>
+
+	* Backport change from trunk:
+	* matcher/localmatch.cc,matcher/multimatch.cc,matcher/rset.cc: Add
+	  missing explicit inclusions of "omassert.h".
+
 Thu Jun 03 10:24:21 GMT 2010  Olly Betts <olly@survex.com>
 
 	* Backport change from trunk:
